--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -2,6 +2,6 @@
 
 @main("Welcome to Play") {
   <h1>Welcome to Play!</h1>
-  <Hello my people!</h1>
-  <Hello again</h1>
+  <h1>Hello my people!</h1>
+  <h1>Hello again</h1>
 }
